@@ -65,7 +65,7 @@ Now check the local roles:
     >>> task2.get_local_roles()
     (('foo', ('Editor',)), (u'og_mandant1_inbox', ('Editor',)), ('test_user_1_', ('Owner',)))
     >>> folder.get_local_roles()
-    (('test_user_1_', ('Owner',)),)
+    (('foo', ('Contributor',)), (u'og_mandant1_inbox', ('Contributor',)), ('test_user_1_', ('Owner',)))
     >>> related.get_local_roles()
     (('foo', ('Reader',)), (u'og_mandant1_inbox', ('Reader',)), ('test_user_1_', ('Owner',)))
 
@@ -89,7 +89,7 @@ which should set Editor role on the related item:
     >>> task3.get_local_roles()
     (('bar', ('Editor',)), (u'og_mandant2_inbox', ('Editor',)), ('test_user_1_', ('Owner',)))
     >>> folder.get_local_roles()
-    (('test_user_1_', ('Owner',)),)
+    (('bar', ('Contributor',)), ('foo', ('Contributor',)), (u'og_mandant1_inbox', ('Contributor',)), (u'og_mandant2_inbox', ('Contributor',)), ('test_user_1_', ('Owner',)))
     >>> related.get_local_roles()
     (('bar', ('Editor', 'Reader')), ('foo', ('Reader',)), (u'og_mandant1_inbox', ('Reader',)), (u'og_mandant2_inbox', ('Editor', 'Reader')), ('test_user_1_', ('Owner',)))
 
@@ -102,7 +102,7 @@ When updating, it should also update the related items:
     >>> task3.get_local_roles()
     (('bar', ('Editor',)), ('new', ('Editor',)), (u'og_mandant1_inbox', ('Editor',)), (u'og_mandant2_inbox', ('Editor',)), ('test_user_1_', ('Owner',)))
     >>> folder.get_local_roles()
-    (('test_user_1_', ('Owner',)),)
+    (('bar', ('Contributor',)), ('foo', ('Contributor',)), ('new', ('Contributor',)), (u'og_mandant1_inbox', ('Contributor',)), (u'og_mandant2_inbox', ('Contributor',)), ('test_user_1_', ('Owner',)))
     >>> related.get_local_roles()
     (('bar', ('Editor', 'Reader')), ('foo', ('Reader',)), ('new', ('Editor', 'Reader')), (u'og_mandant1_inbox', ('Editor', 'Reader')), (u'og_mandant2_inbox', ('Editor', 'Reader')), ('test_user_1_', ('Owner',)))
 
