@@ -5,7 +5,9 @@ Changelog
 2.3.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Reactivate the set_roles_on_distinct_parent in the localroles setter.
+  Because to edit(external_edit) related documents of a task it's necessary to have permissions on the dossier.
+  [phgross]
 
 
 2.3.3 (2012-03-12)
